[package]
name = "rpc-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.139"
toml = "0.8.19"
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
bs58 = "0.5.1"
futures = "0.3.31"
rand = "0.8.5"
log = "0.4.22"
env_logger = "0.11.6"
bincode = "1.3.3"
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive"] }

# Solana v3 crates from copychain
solana-sdk = "=3.0"
solana-client = "^3.0.0"
solana-program = { version = "~3.0.0", features = ["borsh"] }
solana-account = "3.0.0"
solana-account-decoder = "^3.0.5"
solana-transaction-status = "^3.0.3"
solana-system-transaction = "3.0.0"
solana-compute-budget-interface = { version = "^3.0.0", features = ["borsh"] }
solana-nonce = "3"
solana-signature = "^3.0.0"
solana-instruction = { version = "~3.0.0", default-features = false }
solana-message = "^3.0.1"
solana-pubkey = { version = "^3.0.0", features = [
    "serde",
    "borsh",
    "curve25519",
] }
solana-system-interface = "2.0.0"
solana-address-lookup-table-interface = "3.0.0"
